--- a/WebContent/WEB-INF/zul/update/form.zul
+++ b/WebContent/WEB-INF/zul/update/form.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,15 +14,17 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="updateForm"
-	use="com.jaeksoft.searchlib.web.controller.update.UpdateFormController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('updateForm') @init('com.jaeksoft.searchlib.web.controller.update.UpdateFormController')">
 	<panel title="1. Select the language of the document"
 		border="normal">
 		<panelchildren>
-			<listbox mold="select" selectedItem="@{updateForm.lang}"
-				model="@{updateForm.languageEnum}">
-				<listitem self="@{each=langEnum}"
-					label="@{langEnum.name}" value="@{langEnum}" />
+			<listbox mold="select" selectedItem="@bind(updateForm.lang)"
+				model="@load(updateForm.languageEnum)">
+				<template name="model" var="langEnum">
+					<listitem label="@load(langEnum.name)"
+						value="@load(langEnum)" />
+				</template>
 			</listbox>
 		</panelchildren>
 	</panel>
@@ -31,39 +33,62 @@
 		<panelchildren>
 			<hbox align="center">
 				<label value="Select a field: " />
-				<listbox mold="select" model="@{updateForm.fieldList}"
-					selectedItem="@{updateForm.selectedField}">
-					<listitem self="@{each='field'}"
-						label="@{field.name}" />
+				<listbox mold="select"
+					model="@load(updateForm.fieldList)"
+					selectedItem="@bind(updateForm.selectedField)">
+					<template name="model" var="field">
+						<listitem label="@load(field.name)" />
+					</template>
 				</listbox>
-				<button label="add" forward="onAdd" />
+				<button label="add" onClick="@command('onAdd')" />
 			</hbox>
-			<listbox model="@{updateForm.fieldDocumentList}">
-				<listitem self="@{each='fieldDocument'}">
-					<listcell>
-						<panel title="@{fieldDocument.field}"
-							collapsible="true">
-							<panelchildren>
-								<listbox
-									model="@{fieldDocument.fieldValueList}"
-									itemRenderer="@{updateForm}">
-									<listhead>
-										<listheader label="Boost" width="60px" />
-										<listheader label="Value" />
-										<listheader width="25px" />
-									</listhead>
-								</listbox>
-							</panelchildren>
-						</panel>
-					</listcell>
-				</listitem>
+			<listbox model="@load(updateForm.fieldDocumentList)">
+				<template name="model" var="fieldDocument">
+					<listitem>
+						<listcell>
+							<panel title="@load(fieldDocument.field)"
+								collapsible="true">
+								<panelchildren>
+									<listbox
+										model="@load(fieldDocument.fieldValueList)">
+										<listhead>
+											<listheader label="Boost"
+												width="60px" />
+											<listheader label="Value" />
+											<listheader width="25px" />
+										</listhead>
+										<template name="model"
+											var="fieldValue">
+											<listitem>
+												<listcell>
+													<doublebox
+														width="99%" value="@bind(fieldValue.boost)" />
+												</listcell>
+												<listcell>
+													<textbox width="99%"
+														rows="3" value="@bind(fieldValue.value)" />
+												</listcell>
+												<listcell>
+													<image
+														src="/images/action_delete.png"
+														onClick="@command('onValueRemove', fieldValue=fieldValue)" />
+												</listcell>
+											</listitem>
+										</template>
+									</listbox>
+								</panelchildren>
+							</panel>
+						</listcell>
+					</listitem>
+				</template>
 			</listbox>
 		</panelchildren>
 	</panel>
 	<separator height="10px" />
 	<panel title="3. Insert / update the document" border="normal">
 		<panelchildren>
-			<button label="Insert / Update" forward="onUpdate" />
+			<button label="Insert / Update"
+				onClick="@command('onUpdate')" />
 		</panelchildren>
 	</panel>
 </window>
