--- a/WebContent/WEB-INF/zul/crawler/web/exclusion.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/exclusion.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,11 +14,12 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="exclusion"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.ExclusionController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('exclusion') @init('com.jaeksoft.searchlib.web.controller.crawler.web.ExclusionController')">
 	<vbox width="99%"
-		visible="@{exclusion.webCrawlerEditPatternsRights}">
-		<checkbox label="Enabled" checked="@{exclusion.enabled.value}" />
+		visible="@load(exclusion.webCrawlerEditPatternsRights)">
+		<checkbox label="Enabled"
+			checked="@bind(exclusion.enabled.value)" />
 		<separator />
 		<label>For example:</label>
 		<label>
@@ -35,28 +36,33 @@
 			open-search-server.com domain.
 		</label>
 		<textbox multiline="true" rows="10" width="100%"
-			value="@{exclusion.pattern}" />
-		<button label="Add" forward="onAdd" />
+			value="@bind(exclusion.pattern)" />
+		<button label="Add" onClick="@command('onAdd')" />
 	</vbox>
 	<separator />
 	<hbox>
 		<label>Filter:</label>
-		<textbox cols="20" value="@{pattern.like}" />
+		<textbox cols="20" value="@load(exclusion.like)" />
 		<space />
-		<button label="Search" forward="onSearch" />
+		<button label="Search" onClick="@command('onSearch')" />
 	</hbox>
 	<separator />
-	<listbox checkmark="@{exclusion.WebCrawlerEditPatternsRights}"
-		multiple="@{exclusion.WebCrawlerEditPatternsRights}"
-		model="@{exclusion.patternList}" itemRenderer="@{exclusion}">
+	<listbox selectedItems="@bind(exclusion.selectedItems)"
+		checkmark="@load(exclusion.webCrawlerEditPatternsRights)"
+		multiple="@load(exclusion.webCrawlerEditPatternsRights)"
+		model="@load(exclusion.patternList)">
+		<template name="model">
+			<listitem label="@load(each.pattern)" />
+		</template>
 		<listfoot>
 			<listfooter>
-				<paging id="paging" detailed="true"
-					totalSize="@{exclusion.totalSize}" pageSize="@{exclusion.pageSize}"
-					activePage="@{exclusion.activePage}" />
+				<paging detailed="true"
+					totalSize="@load(exclusion.totalSize)"
+					pageSize="@load(exclusion.pageSize)"
+					activePage="@bind(exclusion.activePage)" />
 			</listfooter>
 		</listfoot>
 	</listbox>
-	<button label="delete" visible="@{exclusion.selectionRemovable}"
-		forward="onDelete" />
+	<button label="delete" visible="@load(exclusion.selectionRemovable)"
+		onClick="@command('onDelete')" />
 </window>
