--- a/WebContent/WEB-INF/zul/crawler/web/pattern.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/pattern.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,11 +14,12 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="pattern"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.PatternController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('pattern') @init('com.jaeksoft.searchlib.web.controller.crawler.web.PatternController')">
 	<vbox width="99%"
-		visible="@{pattern.webCrawlerEditPatternsRights}">
-		<checkbox label="Enabled" checked="@{pattern.enabled.value}" />
+		visible="@load(pattern.webCrawlerEditPatternsRights)">
+		<checkbox label="Enabled"
+			checked="@bind(pattern.enabled.value)" />
 		<separator />
 		<label>For example:</label>
 		<label>
@@ -35,32 +36,37 @@
 			open-search-server.com domain.
 		</label>
 		<textbox multiline="true" rows="10" width="100%"
-			value="@{pattern.pattern}" />
-		<button label="Add" forward="onAdd" />
+			value="@bind(pattern.pattern)" />
+		<button label="Add" onClick="@command('onAdd')" />
 	</vbox>
 
 	<separator />
 	<hbox>
 		<label>Filter:</label>
-		<textbox cols="20" value="@{pattern.like}" />
+		<textbox cols="20" value="@bind(pattern.like)" />
 		<space />
-		<button label="Search" forward="onSearch" />
+		<button label="Search" onClick="@command('onSearch')" />
 	</hbox>
 	<separator />
-	<listbox onSelect="@{pattern.onSelect}"
-		checkmark="@{pattern.WebCrawlerEditPatternsRights}"
-		multiple="@{pattern.WebCrawlerEditPatternsRights}"
-		model="@{pattern.patternList}" itemRenderer="@{pattern}">
+	<listbox selectedItems="@bind(pattern.selectedItems)"
+		checkmark="@load(pattern.webCrawlerEditPatternsRights)"
+		multiple="@load(pattern.webCrawlerEditPatternsRights)"
+		model="@load(pattern.patternList)">
+		<template name="model">
+			<listitem label="@load(each.pattern)" />
+		</template>
 		<listfoot>
 			<listfooter>
-				<paging id="paging" detailed="true"
-					totalSize="@{pattern.totalSize}" pageSize="@{pattern.pageSize}"
-					activePage="@{pattern.activePage}" />
+				<paging detailed="true"
+					totalSize="@load(pattern.totalSize)"
+					pageSize="@load(pattern.pageSize)"
+					activePage="@bind(pattern.activePage)" />
 			</listfooter>
 		</listfoot>
 	</listbox>
-	<button label="delete" visible="@{pattern.selectionRemovable}"
-		forward="onDelete" />
-	<button label="delete all" visible="@{pattern.selectionRemovable}"
-		forward="onDeleteAll" />
+	<button label="delete" visible="@load(pattern.selectionRemovable)"
+		onClick="@command('onDelete')" />
+	<button label="delete all"
+		visible="@load(pattern.selectionRemovable)"
+		onClick="@command('onDeleteAll')" />
 </window>
